5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4382/executions/1753_1527.log
== SUBMITION (2019-05-16 18:09:35) 
-- CODE:
qif = int(input("quantidade de seguidores de Forseti : "))
qil = int(input("quantidade de seguidores de Loki : "))
paf = float(input("digite o percentual : "))
pal = float(input("digite o percentual : "))
paf , pal = paf/100, pal/100
t = 0
while(qil<quif):
	qif = qif + quif * paf
	qil = qil + qil * pal
	t = t + 1
	print(t)
-- EXECUTION TIME:
0.169762
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1753/1527/main.py", line 7, in <module>
    while(qil<quif):
NameError: name 'quif' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:09:36) 
-- CODE:
qif = int(input("quantidade de seguidores de Forseti : "))
qil = int(input("quantidade de seguidores de Loki : "))
paf = float(input("digite o percentual : "))
pal = float(input("digite o percentual : "))
paf , pal = paf/100, pal/100
t = 0
while(qil<quif):
	qif = qif + quif * paf
	qil = qil + qil * pal
	t = t + 1
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    while(qil<quif):
NameError: name 'quif' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:10:25) 
-- CODE:
qif = int(input("quantidade de seguidores de Forseti : "))
qil = int(input("quantidade de seguidores de Loki : "))
paf = float(input("digite o percentual : "))
pal = float(input("digite o percentual : "))
paf , pal = paf/100, pal/100
t = 0
while(qil<quif):
	qif = qif + quif * paf
	qil = qil + qil * pal
	t = t + 1
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    while(qil<quif):
NameError: name 'quif' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:11:22) 
-- CODE:
qif = int(input("quantidade de seguidores de Forseti : "))
qil = int(input("quantidade de seguidores de Loki : "))
paf = float(input("digite o percentual : "))
pal = float(input("digite o percentual : "))
paf , pal = paf/100, pal/100
t = 0
while(qil<quif):
	qif = qif + quif * paf
	qil = qil + qil * pal
	t = t + 1
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    while(qil<quif):
NameError: name 'quif' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:11:30) 
-- CODE:
qif = int(input("quantidade de seguidores de Forseti : "))
qil = int(input("quantidade de seguidores de Loki : "))
paf = float(input("digite o percentual : "))
pal = float(input("digite o percentual : "))
paf , pal = paf/100, pal/100
t = 0
while(qil<quif):
	qif = qif + quif * paf
	qil = qil + qil * pal
	t = t + 1
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    while(qil<quif):
NameError: name 'quif' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:12:17) 
-- CODE:
qif = int(input("quantidade de seguidores de Forseti : "))
qil = int(input("quantidade de seguidores de Loki : "))
paf = float(input("digite o percentual : "))
pal = float(input("digite o percentual : "))
paf , pal = paf/100, pal/100
t = 0
while(qil<qif):
	qif = qif + quif * paf
	qil = qil + qil * pal
	t = t + 1
	print(t)
-- EXECUTION TIME:
0.184596
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1753/1527/main.py", line 8, in <module>
    qif = qif + quif * paf
NameError: name 'quif' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:12:17) 
-- CODE:
qif = int(input("quantidade de seguidores de Forseti : "))
qil = int(input("quantidade de seguidores de Loki : "))
paf = float(input("digite o percentual : "))
pal = float(input("digite o percentual : "))
paf , pal = paf/100, pal/100
t = 0
while(qil<qif):
	qif = qif + quif * paf
	qil = qil + qil * pal
	t = t + 1
	print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    qif = qif + quif * paf
NameError: name 'quif' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:12:55) 
-- CODE:
qif = int(input("quantidade de seguidores de Forseti : "))
qil = int(input("quantidade de seguidores de Loki : "))
paf = float(input("digite o percentual : "))
pal = float(input("digite o percentual : "))
paf , pal = paf/100, pal/100
t = 0
while(qil<qif):
	qif = qif + qif * paf
	qil = qil + qil * pal
	t = t + 1
	print(t)
-- EXECUTION TIME:
0.253137
-- TEST CASE 1:
---- input:
8000
6000
1.5
4
---- correct output:
12
---- user output:
1
2
3
4
5
6
7
8
9
10
11
12
-- TEST CASE 2:
---- input:
1500
7500
3.2
4
---- correct output:
0
---- user output:

-- TEST CASE 3:
---- input:
9520368741
159874
21.59
54.87
---- correct output:
46
---- user output:
1
2
3
4
5
6
7
8
9
10
11
12
13
14
15
16
17
18
19
20
21
22
23
24
25
26
27
28
29
30
31
32
33
34
35
36
37
38
39
40
41
42
43
44
45
46
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 18:12:55) 
-- CODE:
qif = int(input("quantidade de seguidores de Forseti : "))
qil = int(input("quantidade de seguidores de Loki : "))
paf = float(input("digite o percentual : "))
pal = float(input("digite o percentual : "))
paf , pal = paf/100, pal/100
t = 0
while(qil<qif):
	qif = qif + qif * paf
	qil = qil + qil * pal
	t = t + 1
	print(t)
-- OUTPUT:
1
2
3
4
5
6
7
8
9
10
11
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 18:14:38) 
-- CODE:
qif = int(input("quantidade de seguidores de Forseti : "))
qil = int(input("quantidade de seguidores de Loki : "))
paf = float(input("digite o percentual : "))
pal = float(input("digite o percentual : "))
paf , pal = paf/100, pal/100
t = 0
while(qil<qif):
	qif = qif + qif * paf
	qil = qil + qil * pal
	t = t + 1
print(t)
-- EXECUTION TIME:
0.19503
-- TEST CASE 1:
---- input:
8000
6000
1.5
4
---- correct output:
12
---- user output:
12
-- TEST CASE 2:
---- input:
1500
7500
3.2
4
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
9520368741
159874
21.59
54.87
---- correct output:
46
---- user output:
46
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
